--- a/bday/styles.css
+++ b/bday/styles.css
@@ -12,15 +12,9 @@
   background: green;
   text-decoration: none;
   color: white;
+  font-size: 30px;
 }
-#link1 {
-  position: relative;
-  top: 480px;
-  left: 800px;
-  background: green;
-  text-decoration: none;
-  color: white;
-}
+
 html,body{
   background:radial-gradient(mistyrose,pink);
   height:100%;
@@ -136,15 +130,9 @@ clip-path: polygon(50% 0%, 95% 25%, 95% 75%, 50% 100%, 5% 75%, 5% 25%);
   background: green;
   text-decoration: none;
   color: white;
+  font-size: 25px;
 }
-#link1 {
-  position: relative;
-  top: 400px;
-  left:0;
-  background: green;
-  text-decoration: none;
-  color: white;
-}
+
   .clipped-border{
     width:100px;
     height:150px;
